@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.45 2005/01/16 10:58:00 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.46 2005/01/17 18:57:59 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  17 Jan 2004: John Laliberte <allanonl@bu.edu>
+  Networking.py - changed from combobox to comboentrybox.  Redid some of the
+  logic used to make the user experience better.
+  Widgets.py - added an errorbox2 that has okay and cancel.
 
   16 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   RunInstall.py called poll_notifications() in gtk idle loop and progress
